# log-anomaly-openenv

./: .env.example  .gitignore  DEBUG_INSTRUCTIONS.md  Dockerfile  LIGHTNING_AI_COMMANDS.md  QUICK_START.md  README.md  VLLM_SETUP.md  __init__.py  baseline_inference.py  client.py  config.py  debug_model_responses.py  deploy_to_hf.py  grader.py  inference.py  log_utils.py  loghub_parser.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_tests.py  start-vllm.sh  train_grpo.py  training_client.py  training_prompts.py
data/: README.md
server/: Dockerfile  __init__.py  app.py  custom_web_ui.py  log_anomaly_environment.py
tests/: test_environment.py
