[project]
name = "log_anomaly_env"
version = "1.0.0"
description = "A real-world OpenEnv environment for training AI agents to investigate log anomalies"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "openenv",
    "reinforcement-learning",
    "log-analysis",
    "anomaly-detection",
    "agent-training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
baseline = [
    "openai>=1.0.0",
]
all = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/openenv/log-anomaly-env"
Documentation = "https://github.com/openenv/log-anomaly-env#readme"
Repository = "https://github.com/openenv/log-anomaly-env"
Issues = "https://github.com/openenv/log-anomaly-env/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Since the project is flat (no package directory), include all Python files
include = [
    "*.py",
    "server/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "server/*.py",
    "tests/*.py",
    "data/*.log",
    "data/*.md",
    "openenv.yaml",
    "README.md",
    "requirements.txt",
    "Dockerfile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
